# monitorutil

./: .bumpversion.cfg  .clang-tidy  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json  version.h.in
.devcontainer/: Dockerfile  devcontainer.json
agent/: CMakeLists.txt
agent/inc/: monitor_imp.h  monitor_service_client.h  monitor_service_grpc_caller.h  status_service_client.h  status_service_grpc_caller.h  status_service_interface.h
agent/include/: monitor.h  status_service.h
agent/src/: monitor.cpp  monitor1.cpp  monitor_service_client.cpp  monitor_service_grpc_caller.cpp  monitor_test.cpp  status_service.cpp  status_service_client.cpp  status_service_grpc_caller.cpp
client_exe/: CMakeLists.txt
client_exe/inc/: version_info.h
client_exe/src/: entry_point.cpp
cmake/: config.cmake.in
data_models/: CMakeLists.txt
data_models/inc/: data_models.h  grpc_helper.h  protobuf_grpc_helper.h  protobuf_helper.h
data_models/interfaces/: monitorservice.proto  status.proto  statusservice.proto
data_models/src/: data_models.cpp  grpc_helper.cpp  protobuf_grpc_helper.cpp  protobuf_helper.cpp
service/: CMakeLists.txt
service/inc/: set_status_service.h  set_status_service_run.h
service/src/: set_status_service.cpp  set_status_service_run.cpp
service_exe/: CMakeLists.txt
service_exe/inc/: globalerrorhandler.h  utilities.h
service_exe/src/: entry_point.cpp  globalerrorhandler.cpp  utilities.cpp
src/: a.cpp
tests/: CMakeLists.txt  test_status_service.cpp
utilities/: CMakeLists.txt
utilities/inc/: other_utilities.h  sys_timestamp.h  utilities.h
utilities/src/: other_utilities.cpp  sys_timestamp.cpp  utilities.cpp
